--- a/index.html
+++ b/index.html
@@ -1,3 +1,26 @@
-<html>
-  <h1>Welcome to Data Decision</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome Page</title>
+    <!-- You can add additional styles or link to external stylesheets here -->
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+    </style>
+</head>
+<body>
+
+    <h1>Welcome to My Page</h1>
+
+    <p>This is a simple welcome page created using HTML.</p>
+
+    <p>Feel free to explore and enjoy your time here!</p>
+
+    <!-- You can add more content or links here -->
+
+</body>
 </html>
