--- a/index.html
+++ b/index.html
@@ -1,26 +1,113 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome Page</title>
-    <!-- You can add additional styles or link to external stylesheets here -->
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-    </style>
-</head>
-<body>
+<!DOCTYPE HTML>
+<!--
+	DataDecision
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>DataDecision</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
 
-    <h1>Welcome to My Page</h1>
+		<!-- Header -->
+			<section id="header">
+				<div class="inner">
+					<span class="icon solid major fa-cloud"></span>
+					<h1><strong>Right Tool for Right Job at Right Price</strong>.</h1>
+					<p>Selecting the right tool for data engineering and analytics that balances functionality and cost-effectiveness.</p>
+					<ul class="actions special">
+						<li><a href="#one" class="button scrolly">Discover</a></li>
+					</ul>
+				</div>
+			</section>
 
-    <p>This is a simple welcome page created using HTML.</p>
+		<!-- One -->
+			<section id="one" class="main style1">
+				<div class="container">
+					<div class="row gtr-150">
+						<div class="col-6 col-12-medium">
+							<header class="major">
+								<h2>What we do ?</h2>
+							</header>
+							<p>Our primary focus is on leveraging advanced technologies and methodologies to collect, process, and analyze data, enabling organizations to derive valuable insights for informed decision-making. We specialize in designing and implementing robust data infrastructure, ensuring the efficient storage, retrieval, and processing of large volumes of data. Our analytics solutions involve applying statistical and machine learning techniques to extract meaningful patterns and trends, empowering our clients to make data-driven decisions that enhance their business performance and competitiveness.</p>
+						</div>
+						<div class="col-6 col-12-medium imp-medium">
+							<span class="image fit"><img src="images/pic01.png" alt="" /></span>
+						</div>
+					</div>
+				</div>
+			</section>
 
-    <p>Feel free to explore and enjoy your time here!</p>
+		<!-- Two -->
+			<section id="two" class="main style2">
+				<div class="container">
+					<div class="row gtr-150">
+						<div class="col-6 col-12-medium">
+							<ul class="major-icons">
+								<li><span class="icon solid style1 major fa-code"></span></li>
+								<li><span class="icon solid style2 major fa-bolt"></span></li>
+								<li><span class="icon solid style3 major fa-camera-retro"></span></li>
+								<li><span class="icon solid style4 major fa-cog"></span></li>
+								<li><span class="icon solid style5 major fa-desktop"></span></li>
+								<li><span class="icon solid style6 major fa-calendar"></span></li>
+							</ul>
+						</div>
+						<div class="col-6 col-12-medium">
+							<header class="major">
+								<h2>More about us</h2>
+							</header>
+							<h3>Data Engineering</h3>
+							<p>We design and implement seamless data integration processes, ensuring the smooth flow of information from diverse sources into a unified and accessible format. We build robust data warehouses that serve as centralized repositories for structured and unstructured data, facilitating efficient storage and retrieval. Our expertise includes developing ETL pipelines to extract data from various sources, transform it into a usable format, and load it into the target systems</p>
+							<h3>Data Architecture</h3>
+							<p>Our team develops comprehensive data models that define the relationships and structures within the data, ensuring a clear understanding of the information architecture</p>
+							<h3>Data Analytics</h3>
+							<p>Our BI solutions provide intuitive dashboards and reports, allowing stakeholders to visualize key performance indicators and gain actionable insights</p>
+						</div>
+					</div>
+				</div>
+			</section>
 
-    <!-- You can add more content or links here -->
+		<!-- Three -->
+			<section id="three" class="main style1 special">
+					<div class="container">
+						<header class="major">
+							<h2>Need A Data Help?</h2>
+						</header>
+						<p>REACH OUT TO US TODAY</p>
+						<ul class="actions special">
+							<dt>Email : </dt><dd><a href="mailto:info@datadecision.in">info@datadecision.in</a></dd>
+						</ul>
+					</div>
+			</section>
 
-</body>
+		
+		<!-- Footer -->
+			<section id="footer">
+				<ul class="icons">
+					<!-- <li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li> -->
+					<!-- <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li> -->
+					<!-- <li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li> -->
+					<li><a href="https://www.linkedin.com/company/data-decision-in" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+					<!-- <li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li> -->
+					<li><a href="mailto:info@datadecision.in" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+				</ul>
+				<ul class="copyright">
+					<li><strong>&copy; DataDecision 2023</strong></li>
+				</ul>
+			</section>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
