--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 					<!-- <li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li> -->
 					<li><a href="https://www.linkedin.com/company/data-decision-in" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					<!-- <li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li> -->
+					<li><a href="https://medium.com/@datadecision" class="icon brands alt fa-medium"><span class="label">Medium</span></a></li>
 					<li><a href="mailto:info@datadecision.in" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
