--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<!-- <link rel="stylesheet" href="assets/css/main2.css" /> -->
 	</head>
 	<body class="is-preload">
-
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
@@ -96,6 +96,7 @@
 					<!-- <li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li> -->
 					<li><a href="https://medium.com/@datadecision" class="icon brands alt fa-medium"><span class="label">Medium</span></a></li>
 					<li><a href="mailto:info@datadecision.in" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="./analytics.html" ><span class="label">Analytics Dashboard</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li><strong>&copy; DataDecision 2023</strong></li>
